# Inspira

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  fr.daemonwhite.Inspira.json  meson.build
.github/workflows/: ci.yml
build_aux/windows/: Inspira.iss  Inspira.iss.in  meson.build
data/: fr.daemonwhite.Inspira.desktop.in  fr.daemonwhite.Inspira.gschema.xml  fr.daemonwhite.Inspira.gschema.xml.in  fr.daemonwhite.Inspira.metainfo.xml.in  fr.daemonwhite.Inspira.service.in  inspira.gresource.xml  inspira.gresource.xml.in  meson.build
data/css/: style-dark.css  style.css
data/icons/: meson.build
data/ui/: help-overlay.blp  shortcuts-dialog.blp  window.blp
data/ui/widgets/: infos_image.blp  notif_button.blp  overlay_picture.blp  search_tag_autocomplet.blp  state_progress_row.blp  states_row.blp  switch_info_row.blp  tag.blp  wrap_tags.blp
data/ui/widgets/modals/: preferences.blp
flatpak/: fr.daemonwhite.Inspira.devel.json  fr.daemonwhite.Inspira.json
flatpak/plugins/: python3-pillow.json
po/: POTFILES  POTFILES.in  fr.po  inspira.pot  meson.build
src/: config.in  inspira.in  inspira.py  main.py  meson.build  window.py
src/apis/: nekomoe.py  waifuim.py
src/core/: ApiInterface.py  __init__.py  download_manager.py  imgData.py  infoRequest.py  manager.py
src/core/Api/: __init__.py  capability.py  interface.py
src/core/Manager/: __init__.py  api.py  download.py
src/interfaceAPI/: capability.py  interfaceAPI.py  manager.py  nekomoe.py  waifuim.py
src/items/: image.py
src/utils/: __init__.py  gtk_settings.py  language.py  load_apis.py  state_progress.py  tags_storage.py  unique_list.py
src/widgets/: infos_image.py  notif_button.py  overlay_picture.py  search_tag_autocomplet.py  state_progress_row.py  states_row.py  switch_info_row.py  tag.py  wrap_tags.py
src/widgets/modals/: __init__.py  preferences.py
tools/: clean.sh  confirure.sh  run.sh  translation_tool.sh
